# Architechture

./: CMakeLists.txt  GlobData.hpp  init_db.sql  postkafka.cpp  server.cpp  unittests.cpp
docker/: docker-compose.yml
docker/mysql/: Dockerfile
docker/mysql/mysql.conf.d/: mysqld.cnf
docker/proxysql/: Dockerfile  proxysql.cnf
html/: index.html
